--- a/src/style/services/facebooklike.less
+++ b/src/style/services/facebooklike.less
@@ -1,5 +1,5 @@
 .shariff {
-    .facebook {
+    .facebooklike {
         a {
             background-color: #3b5998;
             &:hover {
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 600px) {
     .shariff {
-        .facebook .fa-facebook {
+        .facebooklike .fa-facebook {
             font-size: 19px;
         }
     }
