--- a/src/style/services/googleplus.less
+++ b/src/style/services/googleplus.less
@@ -8,6 +8,7 @@
         }
         .fa-google-plus {
             font-size: 22px;
+			&:before { content: @fa-var-google-plus; }
         }
         .share_count {
             color: #a31601;
