--- a/src/style/services/info.less
+++ b/src/style/services/info.less
@@ -11,6 +11,7 @@
         .fa-info {
             font-size: 20px;
             width: 33px;
+			&:before { content: @fa-var-info; }
         }
         .share_text {
             display: block !important;
