--- a/src/style/services/mail.less
+++ b/src/style/services/mail.less
@@ -8,6 +8,7 @@
         }
         .fa-envelope {
             font-size: 21px;
+			&:before { content: @fa-var-envelope; }
         }
     }
     .theme-white {
