--- a/src/style/services/twitter.less
+++ b/src/style/services/twitter.less
@@ -8,6 +8,7 @@
         }
         .fa-twitter {
             font-size: 28px;
+			&:before { content: @fa-var-twitter; }
         }
         .share_count {
             color: #0174a4;
