--- a/src/style/services/whatsapp.less
+++ b/src/style/services/whatsapp.less
@@ -8,6 +8,7 @@
         }
         .fa-whatsapp {
             font-size: 28px;
+			&:before { content: @fa-var-whatsapp; }
         }
     }
     .theme-white {
