--- a/src/style/shariff-complete.less
+++ b/src/style/shariff-complete.less
@@ -1,5 +1,7 @@
 // Font-Awesome
-@import "font-awesome";
+@import "variables";
+@import "path";
+@import "core";
 
 // Shariff
 @import "shariff-layout";
