--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -28,7 +28,7 @@
         box-sizing: border-box;
         overflow: hidden;
         a {
-            color: #fff;
+            color: #fff !important;
             position: relative;
             display: block;
             height: 35px;
