--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,4 +1,5 @@
 @import "services/facebook";
+@import "services/facebooklike";
 @import "services/googleplus";
 @import "services/info";
 @import "services/linkedin";
