--- a/src/style/services/linkedin.less
+++ b/src/style/services/linkedin.less
@@ -8,6 +8,7 @@
         }
         .fa-linkedin {
             font-size: 22px;
+			&:before { content: @fa-var-linkedin; }
         }
         .share_count {
             color: #004785;
