--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -8,6 +8,7 @@
         }
         .fa-pinterest-p {
             font-size: 22px;
+			&:before { content: @fa-var-pinterest-p; }
         }
         .share_count {
             color: #a31601;
