--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -8,6 +8,7 @@
         }
         .fa-xing {
             font-size: 22px;
+			&:before { content: @fa-var-xing; }
         }
         .share_count {
             color: #15686a;
