--- a/src/style/services/googleplus.less
+++ b/src/style/services/googleplus.less
@@ -3,34 +3,31 @@
         a {
             background-color: #d34836;
             &:hover {
-                background-color: @col-gp-h;
+                background-color: #f75b44;
             }
-			div {
-				border: 1px solid @col-gp;
-				&:hover {
-					border-color: @col-gp-h;
-				}
-			}
         }
         .fa-google-plus {
-            font-size: 19px;
-            position: relative;
-            top: 1px;
+            font-size: 22px;
 			&:before { content: @fa-var-google-plus; }
         }
         .share_count {
-            color: @col-gp-cs;
-            background-color: @col-gp-bgs;
+            color: #a31601;
+            background-color: #eda79d;
         }
     }
     .theme-white {
         .googleplus a {
-            color: @col-gp;
+            color: #d34836;
         }
     }
-	.theme-grey {
-		.facebooklike a:hover {
-			background-color: @col-gp;
-		}
-	}
+}
+
+@media only screen and (min-width: 600px) {
+    .shariff {
+        .googleplus .fa-google-plus {
+            font-size: 19px;
+            position: relative;
+            top: 1px;
+        }
+    }
 }
