--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -1,29 +1,31 @@
 .shariff {
     .xing {
         a {
-            background-color: @col-xi;
+            background-color: #126567;
             &:hover {
-                background-color: @col-xi-h;
+                background-color: #29888a;
             }
- 			div {
-				border: 1px solid @col-xi;
-				&:hover {
-					border-color: @col-xi-h;
-				}
-			}
-       }
+        }
         .fa-xing {
-            font-size: 19px;
+            font-size: 22px;
 			&:before { content: @fa-var-xing; }
         }
         .share_count {
-            color: @col-xi-cs;
-            background-color: @col-xi-bgs;
+            color: #15686a;
+            background-color: #4fa5a7;
         }
     }
     .theme-white {
         .xing a {
-            color: @col-xi;
+            color: #126567;
+        }
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .shariff {
+        .xing .fa-xing {
+            font-size: 19px;
         }
     }
 }
