--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -1,36 +1,33 @@
 .shariff {
     .pinterest {
         a {
-            background-color: @col-pi;
+            background-color: #bd081c;
             &:hover {
-                background-color: @col-pi-h;
+                background-color: lighten(#bd081c, 5%);
             }
- 			div {
-				border: 1px solid @col-pi;
-				&:hover {
-					border-color: @col-pi-h;
-				}
-			}
-       }
+        }
         .fa-pinterest-p {
-            font-size: 19px;
-            position: relative;
-            top: 1px;
+            font-size: 22px;
 			&:before { content: @fa-var-pinterest-p; }
         }
         .share_count {
-            color: @col-pi-cs;
-            background-color: @col-pi-bgs;
+            color: #a31601;
+            background-color: #eda79d;
         }
     }
     .theme-white {
         .pinterest a {
-            color: @col-pi;
+            color: #bd081c;
         }
     }
-	.theme-grey {
-		.facebooklike a:hover {
-			background-color: @col-pi;
-		}
-	}
+}
+
+@media only screen and (min-width: 600px) {
+    .shariff {
+        .pinterest .fa-pinterest-p {
+            font-size: 19px;
+            position: relative;
+            top: 1px;
+        }
+    }
 }
