--- a/src/style/shariff-complete.less
+++ b/src/style/shariff-complete.less
@@ -1,7 +1,5 @@
 // Font-Awesome
-@import "variables";
-@import "path";
-@import "core";
+@import "font-awesome";
 
 // Shariff
 @import "shariff-layout";
