auf new-CSS aktualisiert

--- a/src/style/services/facebook.less
+++ b/src/style/services/facebook.less
@@ -1,30 +1,34 @@
 .shariff {
     .facebook {
         a {
-            background-color: #3b5998;
+            background-color: @col-fb;
             &:hover {
-                background-color: #4273c8;
+                background-color: @col-fb-h;
             }
+			div {
+				border: 1px solid @col-fb;
+				&:hover {
+					border-color: @col-fb-h;
+				}
+			}
         }
         .fa-facebook {
-            font-size: 22px;
+            font-size: 19px;
+			&:before { content: @fa-var-facebook; }
         }
         .share_count {
-            color: #183a75;
-            background-color: #99adcf;
+            color: @col-fb-cs;
+            background-color: @col-fb-bgs;
         }
     }
     .theme-white {
         .facebook a {
-            color: #3b5998;
+            color: @col-fb;
         }
     }
-}
-
-@media only screen and (min-width: 600px) {
-    .shariff {
-        .facebook .fa-facebook {
-            font-size: 19px;
-        }
-    }
+	.theme-grey {
+		.facebooklike a:hover {
+			background-color: @col-fb;
+		}
+	}
 }
