--- a/src/style/shariff-complete.less
+++ b/src/style/shariff-complete.less
@@ -1,6 +1,9 @@
 // Font-Awesome
-@import "font-awesome";
+@import "variables";
+@import "path";
+@import "core";
 
 // Shariff
+@import "variables-shariff";
 @import "shariff-layout";
 @import "shariff-services";
