--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -77,4 +77,18 @@
 			width: 100%;
 		}
 	}
+	.shariff-tooltip {
+		position: absolute;
+		background-color: #FFFFFF;
+		bottom: 40px;
+		color: #000000;
+		padding: 7px;
+		border: 1px solid #ddd;
+		width: 180px;
+		z-index: 100;
+		iframe {
+			display: block;
+			border: none;
+		}
+	}
 }
