google plus plus, print, reduced translation

--- a/src/style/services/facebook.less
+++ b/src/style/services/facebook.less
@@ -22,12 +22,12 @@
         }
     }
     .theme-white {
-        .facebook a {
+        .facebook a span {
             color: @col-fb;
         }
     }
 	.theme-grey {
-		.facebooklike a:hover {
+		.facebook a:hover {
 			background-color: @col-fb;
 		}
 	}
