--- a/src/style/services/googleplusplus.less
+++ b/src/style/services/googleplusplus.less
@@ -1,5 +1,5 @@
 .shariff {
-    .googleplus {
+    .googleplusplus {
         a {
             background-color: #d34836;
             &:hover {
@@ -22,14 +22,20 @@
             color: @col-gp-cs;
             background-color: @col-gp-bgs;
         }
+		.shariff-tooltip {
+			div {
+				height: 24px;
+				display: block !important;
+			}
+		}
     }
     .theme-white {
-        .googleplus a span {
+        .googleplusplus a span {
             color: @col-gp;
         }
     }
 	.theme-grey {
-		.googleplus a:hover {
+		.googleplusplus a:hover {
 			background-color: @col-gp;
 		}
 	}
