--- a/src/style/services/linkedin.less
+++ b/src/style/services/linkedin.less
@@ -22,12 +22,12 @@
         }
     }
     .theme-white {
-        .linkedin a {
+        .linkedin a span {
             color: @col-li;
         }
     }
 	.theme-grey {
-		.facebooklike a:hover {
+		.linkedin a:hover {
 			background-color: @col-li;
 		}
 	}
