--- a/src/style/services/mail.less
+++ b/src/style/services/mail.less
@@ -18,12 +18,12 @@
         }
     }
     .theme-white {
-        .mail a {
+        .mail a span {
             color: @col-ma;
         }
     }
 	.theme-grey {
-		.facebooklike a:hover {
+		.mail a:hover {
 			background-color: @col-ma;
 		}
 	}
