--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -24,12 +24,12 @@
         }
     }
     .theme-white {
-        .pinterest a {
+        .pinterest a span {
             color: @col-pi;
         }
     }
 	.theme-grey {
-		.facebooklike a:hover {
+		.pinterest a:hover {
 			background-color: @col-pi;
 		}
 	}
