--- a/src/style/services/twitter.less
+++ b/src/style/services/twitter.less
@@ -22,7 +22,7 @@
         }
     }
     .theme-white {
-        .twitter a {
+        .twitter a span {
             color: @col-tw;
         }
     }
