--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,10 +1,12 @@
 @import "services/facebook";
 @import "services/facebooklike";
 @import "services/googleplus";
+@import "services/googleplusplus";
 @import "services/info";
 @import "services/linkedin";
 @import "services/mail";
-@import "services/pinterest";
+/*@import "services/pinterest";*/
+@import "services/print";
 @import "services/twitter";
-@import "services/whatsapp";
+/*@import "services/whatsapp";*/
 @import "services/xing";
