--- a/src/style/services/facebooklike.less
+++ b/src/style/services/facebooklike.less
@@ -31,7 +31,7 @@
 		}
    }
     .theme-white {
-        .facebooklike a {
+        .facebooklike a span {
             color: @col-fb;
         }
     }
