--- a/src/style/services/whatsapp.less
+++ b/src/style/services/whatsapp.less
@@ -18,7 +18,7 @@
         }
     }
     .theme-white {
-        .whatsapp a {
+        .whatsapp a span {
             color: @col-wa;
         }
     }
