--- a/src/style/services/googleplusplus.less
+++ b/src/style/services/googleplusplus.less
@@ -37,6 +37,9 @@
 	.theme-grey {
 		.googleplusplus a:hover {
 			background-color: @col-gp;
+			div {
+				border-color: @col-gp;
+			}
 		}
 	}
 }
