--- a/src/style/services/info.less
+++ b/src/style/services/info.less
@@ -19,10 +19,15 @@
     }
     .theme-grey {
         .info a {
-            background-color: #fff;
             &:hover {
-                background-color: #efefef;
+                background-color: #828282;
+				div {
+					border-color: #828282;
+				}
             }
+			span {
+				color: #fff;
+			}
         }
     }
 
