--- a/src/style/services/twitter.less
+++ b/src/style/services/twitter.less
@@ -26,4 +26,12 @@
             color: @col-tw;
         }
     }
+	.theme-grey {
+		.twitter a:hover {
+			background-color: @col-tw;
+			div {
+				border-color: @col-tw;
+			}
+		}
+	}
 }
