--- a/src/style/services/whatsapp.less
+++ b/src/style/services/whatsapp.less
@@ -22,4 +22,12 @@
             color: @col-wa;
         }
     }
+	.theme-grey {
+		.whatsapp a:hover {
+			background-color: @col-wa;
+			div {
+				border-color: @col-wa;
+			}
+		}
+	}
 }
