--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -24,6 +24,14 @@
     .theme-white {
         .xing a span {
             color: @col-xi;
-        }
+       }
     }
+	.theme-grey {
+		.xing a:hover {
+			background-color: @col-xi;
+			div {
+				border-color: @col-xi;
+			}
+		}
+	}
 }
