--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -98,6 +98,17 @@
 			}
 		}
 	}
+	.theme-grey li a {
+		background-color: #b0b0b0;
+		div {
+			border: 1px solid #b0b0b0;
+			.share_count {
+				background-color: #ccc;
+				color: #333;
+			}
+		}
+    }
+
 	.shariff-tooltip {
 		position: absolute;
 		background-color: #fff;
