--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -5,8 +5,9 @@
 @import "services/info";
 @import "services/linkedin";
 @import "services/mail";
-/*@import "services/pinterest";*/
+@import "services/pinterest";
 @import "services/print";
+@import "services/tumblr";
 @import "services/twitter";
-/*@import "services/whatsapp";*/
+@import "services/whatsapp";
 @import "services/xing";
