--- a/src/style/variables-shariff.less
+++ b/src/style/variables-shariff.less
@@ -40,6 +40,12 @@
 @col-pi-cs: darken(@col-pi, @darken);
 @col-pi-bgs: lighten(@col-pi, @lighten_bg);
 
+// Tumblr
+@col-tr: #34526f;
+@col-tr-h: lighten(@col-tr, @lighten);
+@col-tr-cs: darken(@col-tr, @darken);
+@col-tr-bgs: lighten(@col-tr, @lighten_bg);
+
 // Twitter
 @col-tw: #55acee;
 @col-tw-h: lighten(@col-tw, @lighten);
