--- a/src/style/variables-shariff.less
+++ b/src/style/variables-shariff.less
@@ -18,6 +18,12 @@
 @col-fb-cs: darken(@col-fb, @darken);	// Backend Zahlen
 @col-fb-bgs: #dfe3ee;					// Backend Hintergrund
 
+// Flattr
+@col-fl: #f67c1a;
+@col-fl-h: lighten(@col-fl, @lighten);
+@col-fl-cs: darken(@col-fl, @darken);
+@col-fl-bgs: lighten(@col-fl, @lighten_bg);
+
 // Google+
 @col-gp: #d34836;
 @col-gp-h: lighten(@col-gp, @lighten);
