--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,5 +1,6 @@
 @import "services/facebook";
 @import "services/facebooklike";
+@import "services/flattr";
 @import "services/googleplus";
 @import "services/googleplusplus";
 @import "services/info";
