--- a/src/style/services/print.less
+++ b/src/style/services/print.less
@@ -17,6 +17,9 @@
 			&:before { content: @fa-var-print; }
         }
     }
+	ul:not(.orientation-vertical) li.print {
+		float: right;
+	}
     .theme-grey {
         .print a {
             &:hover {
