--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,14 +1,14 @@
 @import "services/facebook";
 @import "services/facebooklike";
-@import "services/flattr";
+/*@import "services/flattr";*/
 @import "services/googleplus";
 @import "services/googleplusplus";
-@import "services/info";
+/*@import "services/info";*/
 @import "services/linkedin";
-@import "services/mail";
-@import "services/pinterest";
+/*@import "services/mail";
+@import "services/pinterest";*/
 @import "services/print";
-@import "services/tumblr";
+/*@import "services/tumblr";*/
 @import "services/twitter";
-@import "services/whatsapp";
+/*@import "services/whatsapp";*/
 @import "services/xing";
