--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -49,6 +49,9 @@
 				text-decoration: none !important;
 			}
 			div {
+				@media (max-width: 550px) {
+					text-align: center;
+				}
 				height: 28px;
 				overflow: hidden;
 				span {
@@ -65,6 +68,7 @@
 					float: right;
 					min-width: 30px;
 					text-align: center;
+					padding: 0 2px;
 				}
 				.share_text {
 					min-width: 38px;
