--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -55,6 +55,7 @@
 				}
 				height: 28px;
 				overflow: hidden;
+				box-sizing: content-box;
 				span {
 					display: inline-block;
 					line-height: 28px;
