--- a/src/style/variables-shariff.less
+++ b/src/style/variables-shariff.less
@@ -5,7 +5,7 @@
 @min-width-backend: 80px;
 
 // Anzahl Services
-@services: 10;  
+@services: 15;  
 
 //// Farben der Services
 @lighten: 10%;
@@ -17,6 +17,10 @@
 @col-fb-h: lighten(@col-fb, @lighten); 	// Hover
 @col-fb-cs: darken(@col-fb, @darken);	// Backend Zahlen
 @col-fb-bgs: #dfe3ee;					// Backend Hintergrund
+
+// Diaspora
+@col-di: #999;
+@col-di-h: lighten(@col-di, @lighten);
 
 // Flattr
 @col-fl: #f67c1a;
