addet reddit, variables back in modules

--- a/src/style/services/googleplus.less
+++ b/src/style/services/googleplus.less
@@ -1,3 +1,9 @@
+// Google+
+@col-gp: #d34836;
+@col-gp-h: lighten(@col-gp, @lighten);
+@col-gp-cs: darken(@col-gp, @darken);
+@col-gp-bgs: lighten(@col-gp, @lighten_bg);
+
 .shariff {
     .googleplus {
         a {
