--- a/src/style/services/linkedin.less
+++ b/src/style/services/linkedin.less
@@ -1,3 +1,9 @@
+// LinkedIn
+@col-li: #0077b5;
+@col-li-h: lighten(@col-li, @lighten);
+@col-li-cs: darken(@col-li, @darken);
+@col-li-bgs: lighten(@col-li, @lighten_bg);
+
 .shariff {
     .linkedin {
         a {
