--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -1,3 +1,9 @@
+// Pinterest
+@col-pi: #bd081c;
+@col-pi-h: lighten(@col-pi, @lighten);
+@col-pi-cs: darken(@col-pi, @darken);
+@col-pi-bgs: lighten(@col-pi, @lighten_bg);
+
 .shariff {
     .pinterest {
         a {
