--- a/src/style/services/tumblr.less
+++ b/src/style/services/tumblr.less
@@ -1,3 +1,9 @@
+// Tumblr
+@col-tr: #34526f;
+@col-tr-h: lighten(@col-tr, @lighten);
+@col-tr-cs: darken(@col-tr, @darken);
+@col-tr-bgs: lighten(@col-tr, @lighten_bg);
+
 .shariff {
     .tumblr {
         a {
