--- a/src/style/services/whatsapp.less
+++ b/src/style/services/whatsapp.less
@@ -1,3 +1,9 @@
+// Whatsapp
+@col-wa: #5cbe4a;
+@col-wa-h: lighten(@col-wa, @lighten);
+@col-wa-cs: darken(@col-wa, @darken);
+@col-wa-bgs: lighten(@col-wa, @lighten_bg);
+
 .shariff {
     .whatsapp {
         a {
