--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -1,3 +1,9 @@
+// Xing
+@col-xi: #126567;
+@col-xi-h: lighten(@col-xi, @lighten);
+@col-xi-cs: darken(@col-xi, @darken);
+@col-xi-bgs: lighten(@col-xi, @lighten_bg);
+
 .shariff {
     .xing {
         a {
