--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -1,3 +1,14 @@
+// Breite der Elemente mit/ohne Backend
+@max-width: 160px;
+@max-width-backend: 160px;
+@min-width: 40px;
+@min-width-backend: 80px;
+
+//// Farben der Services
+@lighten: 10%;
+@lighten_bg: 40%;
+@darken: 10%;
+
 .shariff {
     &::after,
     &::before {
