--- a/src/style/services/facebook.less
+++ b/src/style/services/facebook.less
@@ -1,3 +1,9 @@
+// Facebook
+@col-fb: #3b5998;
+@col-fb-h: lighten(@col-fb, @lighten); 	// Hover
+@col-fb-cs: darken(@col-fb, @darken);	// Backend Zahlen
+@col-fb-bgs: #dfe3ee;					// Backend Hintergrund
+
 .shariff {
     .facebook {
         a {
