--- a/src/style/services/flattr.less
+++ b/src/style/services/flattr.less
@@ -1,3 +1,9 @@
+// Flattr
+@col-fl: #f67c1a;
+@col-fl-h: lighten(@col-fl, @lighten);
+@col-fl-cs: darken(@col-fl, @darken);
+@col-fl-bgs: lighten(@col-fl, @lighten_bg);
+
 .shariff {
     .flattr {
         a {
