--- a/src/style/services/twitter.less
+++ b/src/style/services/twitter.less
@@ -1,3 +1,9 @@
+// Twitter
+@col-tw: #55acee;
+@col-tw-h: lighten(@col-tw, @lighten);
+@col-tw-cs: darken(@col-tw, @darken);
+@col-tw-bgs: lighten(@col-tw, 30%);
+
 .shariff {
     .twitter {
         a {
