--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,3 +1,6 @@
+// Anzahl Services
+@services: 15;  
+
 @import "services/facebook";
 @import "services/facebooklike";
 @import "services/googleplus";
@@ -11,5 +14,6 @@
 @import "services/info";
 @import "services/mail";
 @import "services/pinterest";
+@import "services/reddit";
 @import "services/whatsapp";
 @import "services/diaspora";
