--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -16,4 +16,5 @@
 @import "services/pinterest";
 @import "services/reddit";
 @import "services/whatsapp";
+@import "services/stumbleupon";
 @import "services/diaspora";
