--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,5 +1,5 @@
 // Anzahl Services
-@services: 15;  
+@services: 15;  //max number of columns
 
 @import "services/facebook";
 @import "services/facebooklike";
