--- a/src/style/services/flattr.less
+++ b/src/style/services/flattr.less
@@ -1,5 +1,5 @@
 // Flattr
-@col-fl: #f67c1a;
+@col-fl: #66b115;
 @col-fl-h: lighten(@col-fl, @lighten);
 @col-fl-cs: darken(@col-fl, @darken);
 @col-fl-bgs: lighten(@col-fl, @lighten_bg);
