--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -17,4 +17,5 @@
 @import "services/reddit";
 @import "services/whatsapp";
 @import "services/stumbleupon";
+@import "services/bitcoin";
 @import "services/diaspora";
